# Ergon

./: .gitignore  README.md  pyproject.toml
ergon/: main.py
ergon/agents/: base.py  cli_agent.py  registry.py
ergon/cli/: app.py
ergon/cli/commands/: agents.py  analyze.py  chat.py  debug.py  diff.py  implement.py  init.py  logs.py  plan.py  review.py  roles.py  run.py  start.py  status.py  tasks.py  validate.py
ergon/core/: artifact_store.py  bootstrap.py  config.py  orchestrator.py  project.py  task.py
ergon/prompts/system/: analyzer.md  debugger.md  docs.md  implementer.md  planner.md  reviewer.md  summarizer.md  tester.md
ergon/prompts/templates/: bugfix.md  code-review.md  debugging.md  embedded-zephyr.md  feature.md  roblox-rojo.md
ergon/roles/: prompts.py
ergon/tools/: commands.py  git.py  worktree.py
ergon/ui/: chat_shell.py  console.py
ergon/utils/: paths.py  slug.py  yaml.py
examples/: project-roblox.yaml  project-zephyr.yaml  task-debug.yaml  task-feature.yaml
